<resources>
    <string name="app_name">Geebela</string>
    <string name="title_activity_maps">Gebeela</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="hint_name">Name</string>
    <string name="hint_lastname">Surname</string>
    <string name="hint_email">Email Address</string>
    <string name="hint_mobilenuber">Mobile Number</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirmpassword">Confirm Password</string>
    <string name="signUp">Sign Up</string>
    <string name="title_notifications">title_notifications</string>
    <string name="post">Post</string>


    <string-array name="report_array">

        <item>Report Bad Driving</item>
        <item>Report Accident</item>
        <item>Other</item>

    </string-array>
    <string name="title_activity_home">HomeActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
</resources>
